--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <button onclick="start()" class="btn btn-success" id="start">Start</button>
     <br><br>
     <h3 id="status" class="btn btn-danger"></h3>
-    <h3 id="object" class="btn btn-warning"></h3>
+    <h3 id="object_status" class="btn btn-warning"></h3>
+    <br><br>
     </center>
 </body>
 <script src="main.js"></script>
